Updated file paths to be relative to index

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/lib/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/lib/leaflet/leaflet.css">
-    <link rel="stylesheet" href="/css/dataview.css">
+    <link rel="stylesheet" href="lib/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="css/dataview.css">
 
     <title>Changes in Madison Residential Permit Sales</title>
   </head>
@@ -99,11 +99,11 @@
     <!-- Dependecies -->
     <script src="https://kit.fontawesome.com/bead2088d4.js" crossorigin="anonymous"></script>
     <!-- jQuery first, then Bootstrap JS (with Popper.js included) -->
-    <script src="/lib/jquery/jquery-3.4.1.js"></script>
-    <script src="/lib/bootstrap/bootstrap.bundle.js"></script>
+    <script src="lib/jquery/jquery-3.4.1.js"></script>
+    <script src="lib/bootstrap/bootstrap.bundle.js"></script>
     <!-- Mapping and charting --> 
     <!-- <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> -->
-    <script src="/lib/leaflet/leaflet-src.js"></script>  
-    <script src ="/js/dataview.js"></script>
+    <script src="lib/leaflet/leaflet-src.js"></script>  
+    <script src ="js/dataview.js"></script>
   </body>
 </html>
