Remove statistic option, Update card titles
Comment out statistic option since percent change is mostly misleading for this data set.
Update card titles to be more descriptive.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="dataControl" class="col-8 col-sm-6 col-md-3 col-lg-2 pb-2 pb-md-0 z-500 stop-prop collapse">
                 <div class="card bg-dark shadow custom-map-panel">
                     <div class="card-body">
-                        <h6 class="card-title">Choose Map Layer</h6>
+                        <h6 class="card-title">Choose A Map Layer</h6>
                         <ul class="nav nav-pills mb-3" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link data-overlay active" id="areas" data-toggle="pill" href="#" role="tab" aria-controls="pills-rp3area" aria-selected="true">RP3 Areas</a>
@@ -44,7 +44,7 @@
                             </li>
                         </ul>
 
-                        <h6 class="card-title">Choose Statistic</h6>
+<!--                         <h6 class="card-title">Choose Statistic</h6>
                         <ul class="nav nav-pills mb-3" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link stat active" id="number" data-toggle="pill" href="#" role="tab" aria-controls="pills-number" aria-selected="false"># Change</a>
@@ -52,7 +52,7 @@
                             <li class="nav-item">
                                 <a class="nav-link stat" id="percent" data-toggle="pill" href="#" role="tab" aria-controls="pills-percentage" aria-selected="true">% Change</a>
                             </li>
-                        </ul>
+                        </ul> -->
 
                         <h6 class="card-title">Show Change in Sales</h6>
                         <div class="custom-control custom-radio">
@@ -86,7 +86,7 @@
             <div id="legend" class="col-6 col-sm-4 col-md-3 col-lg-2 z-500 stop-prop collapse">
                 <div class="card bg-dark shadow custom-map-panel">
                     <div id="legendBody" class="card-body">
-                        <h6 class="card-title mb-0">Change In Sales</h6>
+                        <h6 class="card-title mb-0">Change in Number of Permits Sold</h6>
                         <div id="propSymbolLegend"></div>
                         <div id='legendBlock'></div>
                     </div>
